[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["Eloi <eloisanchez16@gmail.com>"]
readme = "README.md"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
