[tool.poetry]
name = "game-of-life"
version = "1.0.0"
description = "Conway's Game of Life created with Pygame. Learning project to get more comfortable with Python's OOP and inheritance."
authors = ["Eloi <eloisanchez16@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EloiSanchez/game-of-life"
packages = [{include = "game_of_life"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
